--- a/horriblestyle.css
+++ b/horriblestyle.css
@@ -6,6 +6,11 @@ body{
     padding-top: 20px;
 }
 
+footer{
+    position:fixed;
+    bottom: 5px;
+}
+
 .regularDiv{
     background: aquamarine;
 }
